feat: add quotation revision api
